--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   <!-- Content Wrapper -->
   <div
     class="max-w-7xl mx-auto px-5
-           pt-[90px] pb-20
+           pt-[90px] pb-15
            grid grid-cols-1 lg:grid-cols-2 gap-12"
   >
 
@@ -242,6 +242,45 @@
     </div>
   </div>
 </section>
+
+<!-- Trusted Brands / Logos -->
+<section class="bg-brand-600 py-12">
+  <div class="max-w-7xl mx-auto px-6">
+
+    <!-- Section Title -->
+    <h2 class="text-center text-gray-500 uppercase tracking-widest text-sm font-semibold mb-10">
+      Trusted By
+    </h2>
+
+    <!-- Logos Container -->
+    <div class="flex flex-wrap justify-center items-center gap-10 lg:gap-16">
+      <!-- Example Logos -->
+      <div class="flex items-center justify-center h-14">
+        <img src="brand1.png" alt="Brand 1" class="max-h-full opacity-70 hover:opacity-100 transition-all duration-300">
+      </div>
+      <div class="flex items-center justify-center h-14">
+        <img src="brand2.png" alt="Brand 2" class="max-h-full opacity-70 hover:opacity-100 transition-all duration-300">
+      </div>
+      <div class="flex items-center justify-center h-14">
+        <img src="brand3.png" alt="Brand 3" class="max-h-full opacity-70 hover:opacity-100 transition-all duration-300">
+      </div>
+      <div class="flex items-center justify-center h-14">
+        <img src="brand4.png" alt="Brand 4" class="max-h-full opacity-70 hover:opacity-100 transition-all duration-300">
+      </div>
+      <div class="flex items-center justify-center h-14">
+        <img src="brand5.png" alt="Brand 5" class="max-h-full opacity-70 hover:opacity-100 transition-all duration-300">
+      </div>
+      <div class="flex items-center justify-center h-14">
+        <img src="brand6.png" alt="Brand 6" class="max-h-full opacity-70 hover:opacity-100 transition-all duration-300">
+      </div>
+      <div class="flex items-center justify-center h-14">
+        <img src="brand7.png" alt="Brand 7" class="max-h-full opacity-70 hover:opacity-100 transition-all duration-300">
+      </div>
+    </div>
+
+  </div>
+</section>
+
 
 <script src="src/script.js"></script>
 </body>
