--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         <img src="brand5.png" alt="Brand 5" class="max-h-full opacity-70 hover:opacity-100 transition-all duration-300">
       </div>
       <div class="flex items-center justify-center h-14">
-        <img src="brand6.png" alt="Brand 6" class="max-h-full opacity-70 hover:opacity-100 transition-all duration-300">
+        <img src="https://avatars.mds.yandex.net/i?id=21250e34ed1249103ebd91d2cbbc56edd6db910f-3700279-images-thumbs&n=13" alt="Brand 6" class="max-h-full opacity-70 hover:opacity-100 transition-all duration-300">
       </div>
       <div class="flex items-center justify-center h-14">
         <img src="https://avatars.mds.yandex.net/i?id=cc0a54ecc7da257e05c9a628ab8915ceca4d3db4-4662214-images-thumbs&n=13" alt="Brand 7" class="max-h-full opacity-70 hover:opacity-100 transition-all duration-300">
