--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
   <div class="max-w-7xl mx-auto px-6">
 
     <!-- Section Title -->
-    <h2 class="text-center text-gray-500 uppercase tracking-widest text-sm font-semibold mb-10">
+    <h2 class="text-center text-gray-100 uppercase tracking-widest text-sm font-semibold mb-10">
       Trusted By
     </h2>
 
@@ -268,7 +268,7 @@
         <img src="https://avatars.mds.yandex.net/i?id=435f33fae6d42096c31dc4c68b85477e8a2d8216-5424538-images-thumbs&n=13" alt="Brand 4" class="max-h-full opacity-70 hover:opacity-100 transition-all duration-300">
       </div>
       <div class="flex items-center justify-center h-14">
-        <img src="brand5.png" alt="Brand 5" class="max-h-full opacity-70 hover:opacity-100 transition-all duration-300">
+        <img src="https://avatars.mds.yandex.net/i?id=b5c71055f26242b315bfe27de6225c7b1fa8acfb-5501746-images-thumbs&n=13" alt="Brand 5" class="max-h-full opacity-70 hover:opacity-100 transition-all duration-300">
       </div>
       <div class="flex items-center justify-center h-14">
         <img src="https://avatars.mds.yandex.net/i?id=21250e34ed1249103ebd91d2cbbc56edd6db910f-3700279-images-thumbs&n=13" alt="Brand 6" class="max-h-full opacity-70 hover:opacity-100 transition-all duration-300">
