--- a/index.html
+++ b/index.html
@@ -281,6 +281,41 @@
   </div>
 </section>
 
+<!-- AUTHORITY & SOCIAL PROOF STRIP -->
+<section id="authority" class="bg-[#f5f5f5] py-16">
+  <div class="max-w-7xl mx-auto px-6 flex flex-col lg:flex-row items-center justify-between gap-12">
+
+    <!-- LEFT: Key Stats -->
+    <div class="flex flex-col sm:flex-row gap-8 items-center justify-center lg:justify-start w-full lg:w-auto">
+      <div class="flex flex-col items-center sm:items-start text-center sm:text-left">
+        <span class="text-4xl font-extrabold text-[#660000]">10+</span>
+        <span class="text-sm text-[#ec8d8dff] mt-1">Years Coaching Experience</span>
+      </div>
+      <div class="flex flex-col items-center sm:items-start text-center sm:text-left">
+        <span class="text-4xl font-extrabold text-[#660000]">500+</span>
+        <span class="text-sm text-[#ec8d8dff] mt-1">Clients Transformed</span>
+      </div>
+      <div class="flex flex-col items-center sm:items-start text-center sm:text-left">
+        <span class="text-4xl font-extrabold text-[#660000]">Featured In</span>
+        <span class="text-sm text-[#ec8d8dff] mt-1">Forbes / TEDx / Psychology Today</span>
+      </div>
+    </div>
+
+    <!-- RIGHT: Accreditation Badges -->
+    <div class="flex flex-wrap gap-6 justify-center lg:justify-end w-full lg:w-auto mt-8 lg:mt-0">
+      <div class="px-4 py-2 border-2 border-[#660000] rounded-2xl shadow-md hover:scale-105 transition-all cursor-pointer">
+        <img src="https://avatars.mds.yandex.net/i?id=c125d98c0b7fdd73586e5413aa522414844e5cce-10471610-images-thumbs&n=13" alt="Badge 1" class="h-10 object-contain"/>
+      </div>
+      <div class="px-4 py-2 border-2 border-[#660000] rounded-2xl shadow-md hover:scale-105 transition-all cursor-pointer">
+        <img src="https://via.placeholder.com/80x40?text=Badge2" alt="Badge 2" class="h-10 object-contain"/>
+      </div>
+      <div class="px-4 py-2 border-2 border-[#660000] rounded-2xl shadow-md hover:scale-105 transition-all cursor-pointer">
+        <img src="https://via.placeholder.com/80x40?text=Badge3" alt="Badge 3" class="h-10 object-contain"/>
+      </div>
+    </div>
+
+  </div>
+</section>
 
 <script src="src/script.js"></script>
 </body>
