--- a/index.html
+++ b/index.html
@@ -307,10 +307,10 @@
         <img src="https://avatars.mds.yandex.net/i?id=c125d98c0b7fdd73586e5413aa522414844e5cce-10471610-images-thumbs&n=13" alt="Badge 1" class="h-10 object-contain"/>
       </div>
       <div class="px-4 py-2 border-2 border-[#660000] rounded-2xl shadow-md hover:scale-105 transition-all cursor-pointer">
-        <img src="https://via.placeholder.com/80x40?text=Badge2" alt="Badge 2" class="h-10 object-contain"/>
+        <img src="https://avatars.mds.yandex.net/i?id=c125d98c0b7fdd73586e5413aa522414844e5cce-10471610-images-thumbs&n=13" alt="Badge 2" class="h-10 object-contain"/>
       </div>
       <div class="px-4 py-2 border-2 border-[#660000] rounded-2xl shadow-md hover:scale-105 transition-all cursor-pointer">
-        <img src="https://via.placeholder.com/80x40?text=Badge3" alt="Badge 3" class="h-10 object-contain"/>
+        <img src="https://avatars.mds.yandex.net/i?id=c125d98c0b7fdd73586e5413aa522414844e5cce-10471610-images-thumbs&n=13" alt="Badge 3" class="h-10 object-contain"/>
       </div>
     </div>
 
