--- a/index.html
+++ b/index.html
@@ -289,15 +289,15 @@
     <div class="flex flex-col sm:flex-row gap-8 items-center justify-center lg:justify-start w-full lg:w-auto">
       <div class="flex flex-col items-center sm:items-start text-center sm:text-left">
         <span class="text-4xl font-extrabold text-[#660000]">10+</span>
-        <span class="text-sm text-[#ec8d8dff] mt-1">Years Coaching Experience</span>
+        <span class="text-sm text-brand-500 mt-1">Years Coaching Experience</span>
       </div>
       <div class="flex flex-col items-center sm:items-start text-center sm:text-left">
         <span class="text-4xl font-extrabold text-[#660000]">500+</span>
-        <span class="text-sm text-[#ec8d8dff] mt-1">Clients Transformed</span>
+        <span class="text-sm text-brand-500 mt-1">Clients Transformed</span>
       </div>
       <div class="flex flex-col items-center sm:items-start text-center sm:text-left">
         <span class="text-4xl font-extrabold text-[#660000]">Featured In</span>
-        <span class="text-sm text-[#ec8d8dff] mt-1">Forbes / TEDx / Psychology Today</span>
+        <span class="text-sm text-brand-500 mt-1">Forbes / TEDx / Psychology Today</span>
       </div>
     </div>
 
@@ -316,6 +316,50 @@
 
   </div>
 </section>
+
+<!-- WHO THIS IS FOR: Audience Qualification -->
+<section id="audience" class="bg-[#5a3939] py-20">
+  <div class="max-w-7xl mx-auto px-6 text-center lg:text-left">
+
+    <!-- Section Header -->
+    <h2 class="text-4xl sm:text-5xl font-extrabold text-white mb-12">
+      Who This Is For
+    </h2>
+
+    <!-- Cards Grid -->
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
+      <!-- Card 1 -->
+      <div class="bg-white rounded-2xl shadow-2xl p-8 hover:scale-105 transition-all">
+        <h3 class="text-[#660000] font-bold text-xl mb-3">Founders & Entrepreneurs</h3>
+        <p class="text-brand-500 text-sm">Individuals building and scaling ventures who need clarity and peak performance.</p>
+      </div>
+
+      <!-- Card 2 -->
+      <div class="bg-white rounded-2xl shadow-2xl p-8 hover:scale-105 transition-all">
+        <h3 class="text-[#660000] font-bold text-xl mb-3">Executives & Leaders</h3>
+        <p class="text-brand-500 text-sm">High-level professionals responsible for teams and organizations seeking mental clarity and focus.</p>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="bg-white rounded-2xl shadow-2xl p-8 hover:scale-105 transition-all">
+        <h3 class="text-[#660000] font-bold text-xl mb-3">High-Achievers Feeling Stuck or Burnt Out</h3>
+        <p class="text-brand-500 text-sm">People who have achieved a lot but want renewed energy, purpose, and emotional mastery.</p>
+      </div>
+
+      <!-- Card 4 -->
+      <div class="bg-white rounded-2xl shadow-2xl p-8 hover:scale-105 transition-all">
+        <h3 class="text-[#660000] font-bold text-xl mb-3">Individuals Seeking Mental Clarity & Emotional Mastery</h3>
+        <p class="text-brand-500 text-sm">Anyone serious about developing their mindset, emotional intelligence, and peak cognitive performance.</p>
+      </div>
+    </div>
+
+    <!-- Micro-copy -->
+    <p class="mt-12 text-sm text-white italic">
+      This is not therapy. This is high-performance mindset coaching.
+    </p>
+  </div>
+</section>
+
 
 <script src="src/script.js"></script>
 </body>
