--- a/index.html
+++ b/index.html
@@ -421,6 +421,52 @@
   </div>
 </section>
 
+<!-- 5️⃣ TRANSFORMATION PROMISE: Before vs After -->
+<section id="transformation" class="bg-[#5a3939] py-20">
+  <div class="max-w-7xl mx-auto px-6">
+
+    <!-- Section Header -->
+    <h2 class="text-4xl sm:text-5xl font-extrabold text-white text-center mb-12">
+      Transformation Promise
+    </h2>
+    <p class="text-white/70 text-lg sm:text-xl text-center mb-16 max-w-3xl mx-auto">
+      Witness the tangible outcomes of high-performance mindset coaching. From reactive patterns to confident, sustainable excellence.
+    </p>
+
+    <!-- Before vs After Grid -->
+    <div class="grid grid-cols-1 lg:grid-cols-2 gap-12">
+
+      <!-- BEFORE COACHING -->
+      <div class="flex flex-col gap-6 bg-white/10 rounded-3xl p-8 shadow-xl">
+        <h3 class="text-2xl font-bold text-[#660000] mb-4">Before Coaching</h3>
+        <ul class="list-disc list-inside text-white/90 space-y-2">
+          <li>Reactive thinking</li>
+          <li>Emotional volatility</li>
+          <li>Lack of direction</li>
+          <li>Self-doubt</li>
+        </ul>
+      </div>
+
+      <!-- AFTER COACHING -->
+      <div class="flex flex-col gap-6 bg-[#ffcdd2]/90 rounded-3xl p-8 shadow-2xl border-2 border-[#660000]">
+        <h3 class="text-2xl font-bold text-[#660000] mb-4">After Coaching</h3>
+        <ul class="list-disc list-inside text-[#660000] space-y-2">
+          <li>Mental clarity</li>
+          <li>Emotional resilience</li>
+          <li>Confident leadership</li>
+          <li>Sustainable peak performance</li>
+        </ul>
+      </div>
+
+    </div>
+
+    <!-- Micro-copy / Promise Note -->
+    <p class="mt-12 text-white/70 text-center max-w-3xl mx-auto italic">
+      This is where your desire for transformation becomes reality. High-performance leadership starts here.
+    </p>
+
+  </div>
+</section>
 
 
 <script src="src/script.js"></script>
