--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 
       <!-- BEFORE COACHING -->
       <div class="flex flex-col gap-6 bg-white/10 rounded-3xl p-8 shadow-xl">
-        <h3 class="text-2xl font-bold text-[#660000] mb-4">Before Coaching</h3>
+        <h3 class="text-2xl font-bold text-white mb-4">Before Coaching</h3>
         <ul class="list-disc list-inside text-white/90 space-y-2">
           <li>Reactive thinking</li>
           <li>Emotional volatility</li>
@@ -448,7 +448,7 @@
       </div>
 
       <!-- AFTER COACHING -->
-      <div class="flex flex-col gap-6 bg-[#ffcdd2]/90 rounded-3xl p-8 shadow-2xl border-2 border-[#660000]">
+      <div class="flex flex-col gap-6 bg-white rounded-3xl p-8 shadow-2xl border-[#660000]">
         <h3 class="text-2xl font-bold text-[#660000] mb-4">After Coaching</h3>
         <ul class="list-disc list-inside text-[#660000] space-y-2">
           <li>Mental clarity</li>
@@ -468,6 +468,75 @@
   </div>
 </section>
 
+<!-- 6️⃣ COACH’S METHODOLOGY: Expert Differentiation -->
+<section id="methodology" class="bg-[#5a3939] py-20">
+  <div class="max-w-7xl mx-auto px-6">
+
+    <!-- Section Title -->
+    <h2 class="text-4xl sm:text-5xl font-extrabold text-white text-center mb-12">
+      The Science-Backed Coaching Framework
+    </h2>
+    <p class="text-white/70 text-lg sm:text-xl text-center mb-16 max-w-3xl mx-auto">
+      A structured, evidence-based methodology ensures measurable transformation and sustainable high performance.
+    </p>
+
+    <!-- Framework Cards -->
+    <div class="grid grid-cols-1 md:grid-cols-5 gap-8">
+
+      <!-- Step 1: Awareness -->
+      <div class="flex flex-col items-center text-center bg-white/10 rounded-3xl p-6 shadow-xl border-l-4 border-[#660000]">
+        <div class="w-16 h-16 flex items-center justify-center rounded-full bg-[#660000] text-white font-bold text-xl mb-4">
+          1
+        </div>
+        <h3 class="text-white font-semibold mb-2">Awareness</h3>
+        <p class="text-white/80 text-sm">Identify limiting patterns</p>
+      </div>
+
+      <!-- Step 2: Reframing -->
+      <div class="flex flex-col items-center text-center bg-white rounded-3xl p-6 shadow-xl border-l-4 border-[#660000]">
+        <div class="w-16 h-16 flex items-center justify-center rounded-full bg-[#660000] text-white font-bold text-xl mb-4">
+          2
+        </div>
+        <h3 class="text-[#660000] font-semibold mb-2">Reframing</h3>
+        <p class="text-[#660000]/90 text-sm">Rewire belief systems</p>
+      </div>
+
+      <!-- Step 3: Regulation -->
+      <div class="flex flex-col items-center text-center bg-white/10 rounded-3xl p-6 shadow-xl border-l-4 border-[#660000]">
+        <div class="w-16 h-16 flex items-center justify-center rounded-full bg-[#660000] text-white font-bold text-xl mb-4">
+          3
+        </div>
+        <h3 class="text-white font-semibold mb-2">Regulation</h3>
+        <p class="text-white/80 text-sm">Emotional control & resilience</p>
+      </div>
+
+      <!-- Step 4: Integration -->
+      <div class="flex flex-col items-center text-center bg-white rounded-3xl p-6 shadow-xl border-l-4 border-[#660000]">
+        <div class="w-16 h-16 flex items-center justify-center rounded-full bg-[#660000] text-white font-bold text-xl mb-4">
+          4
+        </div>
+        <h3 class="text-[#660000] font-semibold mb-2">Integration</h3>
+        <p class="text-[#660000]/90 text-sm">Applying clarity to real-world decisions</p>
+      </div>
+
+      <!-- Step 5: Optimization -->
+      <div class="flex flex-col items-center text-center bg-white/10 rounded-3xl p-6 shadow-xl border-l-4 border-[#660000]">
+        <div class="w-16 h-16 flex items-center justify-center rounded-full bg-[#660000] text-white font-bold text-xl mb-4">
+          5
+        </div>
+        <h3 class="text-white font-semibold mb-2">Optimization</h3>
+        <p class="text-white/80 text-sm">Sustained high performance</p>
+      </div>
+
+    </div>
+
+    <!-- Optional Micro-copy / Note -->
+    <p class="mt-12 text-white/70 text-center max-w-3xl mx-auto italic">
+      This framework is tailored for elite performers who demand measurable, transformative results.
+    </p>
+
+  </div>
+</section>
 
 <script src="src/script.js"></script>
 </body>
