Updating User Interface

--- a/index.html
+++ b/index.html
@@ -823,7 +823,7 @@
 
 <div class="h-px w-full bg-gradient-to-r from-transparent via-brand-500/30 to-transparent"></div>
 
-<section class="bg-slate-100 py-24">
+<section class="bg-gray-200 py-24">
   <div class="max-w-7xl mx-auto px-6">
 
     <!-- Header -->
@@ -840,42 +840,42 @@
     <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
 
       <!-- Card -->
-      <div class="bg-white rounded-3xl p-8 shadow-lg hover:shadow-xl transition">
+      <div class="bg-brand-700 rounded-3xl p-8 shadow-lg hover:shadow-xl transition">
         <img src="https://avatars.mds.yandex.net/i?id=6b435eaa9479f5bc99043f4fa513336f3eacc842-8897302-images-thumbs&n=13" class="h-10 mb-6" />
-        <p class="text-brand-900 font-semibold">
+        <p class="text-white font-semibold">
           Featured Podcast Guest
         </p>
-        <p class="text-sm text-brand-700 mt-2">
+        <p class="text-sm text-white mt-2">
           Mental clarity under pressure
         </p>
       </div>
 
-      <div class="bg-white rounded-3xl p-8 shadow-lg hover:shadow-xl transition">
+      <div class="bg-brand-700 rounded-3xl p-8 shadow-lg hover:shadow-xl transition">
         <img src="https://avatars.mds.yandex.net/i?id=00ed74e7f37ed6d7970c7d408c423375c143f6c6-6269882-images-thumbs&n=13" class="h-10 mb-6" />
-        <p class="text-brand-900 font-semibold">
+        <p class="text-white font-semibold">
           Keynote Speaker
         </p>
-        <p class="text-sm text-brand-700 mt-2">
+        <p class="text-sm text-white mt-2">
           Executive leadership & resilience
         </p>
       </div>
 
-      <div class="bg-white rounded-3xl p-8 shadow-lg hover:shadow-xl transition">
+      <div class="bg-brand-700 rounded-3xl p-8 shadow-lg hover:shadow-xl transition">
         <img src="https://avatars.mds.yandex.net/i?id=a66829aeef6314d8f07739bfab6c626905301ca1-9100543-images-thumbs&n=13" class="h-10 mb-6" />
-        <p class="text-brand-900 font-semibold">
+        <p class="text-white font-semibold">
           Published Author
         </p>
-        <p class="text-sm text-brand-700 mt-2">
+        <p class="text-sm text-white mt-2">
           Psychology Today / Forbes-style outlets
         </p>
       </div>
 
-      <div class="bg-white rounded-3xl p-8 shadow-lg hover:shadow-xl transition">
+      <div class="bg-brand-700 rounded-3xl p-8 shadow-lg hover:shadow-xl transition">
         <img src="https://avatars.mds.yandex.net/i?id=8a1ee64129712eac5dcb06815abdaebda17c4498-5589448-images-thumbs&n=13" class="h-10 mb-6" />
-        <p class="text-brand-900 font-semibold">
+        <p class="text-white font-semibold">
           Book / Research Contribution
         </p>
-        <p class="text-sm text-brand-700 mt-2">
+        <p class="text-sm text-white mt-2">
           Performance & mindset frameworks
         </p>
       </div>
