Updating User Interface

--- a/index.html
+++ b/index.html
@@ -884,7 +884,7 @@
   </div>
 </section>
 
-<section class="bg-slate-100 py-24">
+<section class="bg-gray-200 py-24">
   <div class="max-w-5xl mx-auto px-6">
 
     <!-- Header -->
@@ -957,7 +957,7 @@
 
 <div class="h-px w-full bg-gradient-to-r from-transparent via-brand-500/40 to-transparent"></div>
 
-<section class="bg-slate-100 py-28">
+<section class="bg-grey-200 py-28">
   <div class="max-w-6xl mx-auto px-6 text-center">
 
     <!-- CTA Card -->
