--- a/index.html
+++ b/index.html
@@ -957,7 +957,7 @@
 
 <div class="h-px w-full bg-gradient-to-r from-transparent via-brand-500/40 to-transparent"></div>
 
-<section class="bg-grey-200 py-28">
+<section class="bg-gray-200 py-28">
   <div class="max-w-6xl mx-auto px-6 text-center">
 
     <!-- CTA Card -->
@@ -972,7 +972,7 @@
           Private Coaching Engagements
         </p>
 
-        <h2 class="text-3xl lg:text-6xl font-extrabold text-brand-900 leading-tight mb-8">
+        <h2 class="text-3xl lg:text-6xl font-extrabold text-brand-700 leading-tight mb-8">
           Ready to Lead With Clarity?
         </h2>
 
@@ -986,7 +986,7 @@
 
           <a
             href="#booking"
-            class="px-10 py-4 bg-brand-700 text-white font-semibold rounded-full shadow-xl hover:bg-brand-600 transition"
+            class="px-10 py-4 bg-brand-700 text-white font-semibold rounded-full shadow-xl hover:bg-gray-200 transition"
           >
             Book a Strategy Call
           </a>
@@ -1010,7 +1010,7 @@
   </div>
 </section>
 
-<footer class="bg-black text-white/80 pt-24 pb-12">
+<footer class="bg-brand-700 text-white/80 pt-24 pb-12">
   <div class="max-w-7xl mx-auto px-6">
 
     <!-- Top Grid -->
