Updating User Interface

--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@
           Private Coaching Engagements
         </p>
 
-        <h2 class="text-3xl lg:text-6xl font-extrabold text-brand-700 leading-tight mb-8">
+        <h2 class="text-3xl lg:text-6xl font-extrabold text-green leading-tight mb-8">
           Ready to Lead With Clarity?
         </h2>
 
@@ -986,7 +986,7 @@
 
           <a
             href="#booking"
-            class="px-10 py-4 bg-brand-700 text-white font-semibold rounded-full shadow-xl hover:bg-gray-200 transition"
+            class="px-10 py-4 bg-brand-700 text-white font-semibold rounded-full shadow-xl hover:bg-gray-200 hover:text-brand-700 transition"
           >
             Book a Strategy Call
           </a>
