--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@
           Private Coaching Engagements
         </p>
 
-        <h2 class="text-3xl lg:text-6xl font-extrabold text-green leading-tight mb-8">
+        <h2 class="text-3xl lg:text-6xl font-extrabold text-brand-700 leading-tight mb-8">
           Ready to Lead With Clarity?
         </h2>
 
