Updating User Interface

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <!-- Header / Navigation -->
 <header
   id="site-header"
-  class="fixed top-0 left-0 w-full z-50 transition-colors duration-300"
+  class="fixed top-0 left-0 w-full z-50 transition-all duration-300"
 >
   <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
 
