--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
       <a
         href="#booking"
-        class="mt-2 bg-brand-700 text-white px-6 py-2.5 rounded-full font-semibold shadow-lg hover:bg-white hover:text-brand-500 transition text-center"
+        class="mt-1 bg-gray-200 text-brand-700 px-6 py-2.5 rounded-full font-semibold shadow-lg hover:bg-white hover:text-brand-500 transition text-center"
       >
         Book Strategy Session
       </a>
