Updating User Interface

--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
 
 
     <!-- Desktop Navigation -->
-    <nav class="hidden md:flex items-center gap-9 text-sm font-medium text-white/80">
+    <nav
+  id="desktop-nav"
+  class="hidden md:flex items-center gap-9 text-sm font-medium transition-colors duration-300"
+>
       <a href="#hero" class="hover:text-white transition">Home</a>
       <a href="#about" class="hover:text-white transition">About</a>
       <a href="#programs" class="hover:text-white transition">Programs</a>
