Updating User Interface

--- a/index.html
+++ b/index.html
@@ -65,25 +65,24 @@
 
 
     <!-- Desktop Navigation -->
-    <nav
+  <nav
   id="desktop-nav"
-  class="hidden md:flex items-center gap-9 text-sm font-medium transition-colors duration-300"
+  class="hidden md:flex items-center gap-9 text-sm font-medium
+         text-white transition-colors duration-300"
 >
-      <a href="#hero" class="hover:text-white transition">Home</a>
-      <a href="#about" class="hover:text-white transition">About</a>
-      <a href="#programs" class="hover:text-white transition">Programs</a>
-      <a href="#faq" class="hover:text-white transition">FAQ</a>
-      <a href="#contact" class="hover:text-white transition">Contact</a>
+    <a href="#hero" class="transition-colors">Home</a>
+    <a href="#about" class="transition-colors">About</a>
+    <a href="#programs" class="transition-colors">Programs</a>
+    <a href="#faq" class="transition-colors">FAQ</a>
+    <a href="#contact" class="transition-colors">Contact</a>
 
-<!-- Primary CTA -->
-<a
-  href="#booking"
-  class="ml-4 bg-white text-brand-500 px-6 py-2.5 rounded-full font-semibold shadow-lg 
-         hover:bg-brand-500 hover:text-white transition"
->
-  Book Strategy Session
-</a>
-    </nav>
+    <a
+      href="#booking"
+      class="cta-btn ml-4 px-6 py-2.5 rounded-full font-semibold shadow-lg transition"
+    >
+      Book Strategy Session
+    </a>
+  </nav>
 
     <!-- Mobile Menu Button -->
     <button
@@ -120,7 +119,7 @@
 
 <!-- Hero Section -->
 <section
-  id="hero"
+  id="hero" data-bg="dark"
   class="relative w-full min-h-screen overflow-hidden"
 >
   <!-- Background -->
@@ -247,7 +246,7 @@
 </section>
 
 <!-- Trusted Brands / Logos -->
-<section class="bg-brand-700 py-12">
+<section data-bg="dark" class="bg-brand-700 py-12">
   <div class="max-w-7xl mx-auto px-6">
 
     <!-- Section Title -->
@@ -285,7 +284,7 @@
 </section>
 
 <!-- AUTHORITY & SOCIAL PROOF STRIP -->
-<section id="authority" class="bg-gray-200 py-16">
+<section id="authority" data-bg="light" class="bg-gray-200 py-16">
   <div class="max-w-7xl mx-auto px-6 flex flex-col lg:flex-row items-center justify-between gap-12">
 
     <!-- LEFT: Key Stats -->
@@ -321,7 +320,7 @@
 </section>
 
 <!-- WHO THIS IS FOR: Audience Qualification -->
-<section id="audience" class="bg-brand-700 py-20">
+<section id="audience" data-bg="dark" class="bg-brand-700 py-20">
   <div class="max-w-7xl mx-auto px-6 text-center lg:text-left">
 
     <!-- Section Header -->
@@ -364,7 +363,7 @@
 </section>
 
 <!-- CORE PROBLEMS: Emotional Resonance -->
-<section id="pain-points" class="bg-gray-200 py-20">
+<section id="pain-points" data-bg="light" class="bg-gray-200 py-20">
   <div class="max-w-7xl mx-auto px-6 text-center lg:text-left">
 
     <!-- Section Header -->
@@ -425,7 +424,7 @@
 </section>
 
 <!-- 5️⃣ TRANSFORMATION PROMISE: Before vs After -->
-<section id="transformation" class="bg-brand-700 py-20">
+<section id="transformation" data-bg="dark" class="bg-brand-700 py-20">
   <div class="max-w-7xl mx-auto px-6">
 
     <!-- Section Header -->
@@ -472,7 +471,7 @@
 </section>
 
 <!-- 6️⃣ COACH’S METHODOLOGY: Expert Differentiation -->
-<section id="methodology" class="bg-brand-700 py-20">
+<section id="methodology" data-bg="dark" class="bg-brand-700 py-20">
   <div class="max-w-7xl mx-auto px-6">
 
     <!-- Section Title -->
@@ -542,7 +541,7 @@
 </section>
 
 <!-- 7️⃣ PROGRAMS / SERVICES -->
-<section id="programs" class="bg-gray-200 py-24">
+<section id="programs" data-bg="light" class="bg-gray-200 py-24">
   <div class="max-w-7xl mx-auto px-6">
 
     <!-- Section Header -->
@@ -670,7 +669,7 @@
   </div>
 </section>
 
-<div class="bg-gray-200 py-16">
+<div data-bg="light" class="bg-gray-200 py-16">
   <div class="max-w-5xl mx-auto flex items-center justify-center gap-6">
     <span class="w-24 h-[1px] bg-brand-700"></span>
     <span class="text-xs tracking-widest text-brand-700 uppercase">
@@ -681,7 +680,7 @@
 </div>
 
 <!-- 8️⃣ TESTIMONIALS -->
-<section id="testimonials" class="bg-gray-200 pb-28">
+<section id="testimonials" data-bg="light" class="bg-gray-200 pb-28">
   <div class="max-w-7xl mx-auto px-6">
 
     <!-- Section Header -->
@@ -765,7 +764,7 @@
   </div>
 </section>
 
-<section class="bg-brand-700 py-24">
+<section data-bg="dark" class="bg-brand-700 py-24">
   <div class="max-w-7xl mx-auto px-6">
 
     <!-- Section Header -->
@@ -824,7 +823,7 @@
   </div>
 </section>
 
-<div class="h-px w-full bg-gradient-to-r from-transparent via-brand-500/30 to-transparent"></div>
+<div data-bg="light" class="h-px w-full bg-gradient-to-r from-transparent via-brand-500/30 to-transparent"></div>
 
 <section class="bg-gray-200 py-24">
   <div class="max-w-7xl mx-auto px-6">
@@ -887,7 +886,7 @@
   </div>
 </section>
 
-<section class="bg-gray-200 py-24">
+<section data-bg="light" class="bg-gray-200 py-24">
   <div class="max-w-5xl mx-auto px-6">
 
     <!-- Header -->
@@ -960,7 +959,7 @@
 
 <div class="h-px w-full bg-gradient-to-r from-transparent via-brand-500/40 to-transparent"></div>
 
-<section class="bg-gray-200 py-28">
+<section data-bg="light" class="bg-gray-200 py-28">
   <div class="max-w-6xl mx-auto px-6 text-center">
 
     <!-- CTA Card -->
@@ -1013,7 +1012,7 @@
   </div>
 </section>
 
-<footer class="bg-brand-700 text-white/80 pt-24 pb-12">
+<footer data-bg="dark" class="bg-brand-700 text-white/80 pt-24 pb-12">
   <div class="max-w-7xl mx-auto px-6">
 
     <!-- Top Grid -->
