Updating User Interface

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <a
       href="#booking"
-      class="cta-btn ml-4 px-6 py-2.5 rounded-full font-semibold shadow-lg transition"
+      class="cta-btn ml-4 px-6 py-2.5 rounded-full font-semibold shadow-lg transition bg-gray-200 text-black"
     >
       Book Strategy Session
     </a>
