--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <!-- Mobile Menu Button -->
     <button
       id="menu-btn"
-      class="md:hidden text-white text-2xl focus:outline-none"
+      class="md:hidden text-white text-2xl focus:outline-none bg-brand-700 w-5"
     >
       ☰
     </button>
